--- a/reviews.css
+++ b/reviews.css
@@ -3,6 +3,40 @@ body {
     margin: 0px;
 }
 
+.navbar ul{
+    list-style-type: none;
+    background-color:#E6B875;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
+}
+
+.navbar a.active {
+    background-color: white;
+    color: #E6B875;
+  }
+
+.navbar a{
+    color: black;
+    text-decoration: none;
+    padding: 30px;
+    display: block;
+    text-align: center;
+    font-family: 'GeneralSansMedium';
+    font-size: 17;
+    width: 19.581vw;
+}
+
+.navbar a:hover{
+    background-color: white;
+    color: #E6B875;
+}
+
+.navbar li{
+    float: left;
+    width: 19.581vw;
+}
+
 #intro_box{
     position: relative;
     max-width: 100%;
@@ -65,7 +99,7 @@ body {
     font-family: 'GeneralSansLightItalic';
     font-size: 15;
     line-height: 0.5;
-    top: 300px;
+    top: 360px;
     left: 7%;
 }
 
@@ -74,7 +108,7 @@ body {
     font-family: 'GeneralSansLightItalic';
     font-size: 15;
     line-height: 0.5;
-    top: 300px;
+    top: 360px;
     left: 55%;
 }
 
@@ -83,7 +117,7 @@ body {
     font-family: 'GeneralSansLightItalic';
     font-size: 15;
     line-height: 0.5;
-    top: 680px;
+    top: 740px;
     left: 7%;
 }
 
@@ -92,7 +126,7 @@ body {
     font-family: 'GeneralSansLightItalic';
     font-size: 15;
     line-height: 0.5;
-    top: 630px;
+    top: 690px;
     left: 54.6%;
 }
 
@@ -101,7 +135,7 @@ body {
     font-family: 'GeneralSansLightItalic';
     font-size: 15;
     line-height: 0.5;
-    top: 1120px;
+    top: 1180px;
     left: 7%;
 }
 
@@ -110,7 +144,7 @@ body {
     font-family: 'GeneralSansLightItalic';
     font-size: 15;
     line-height: 0.5;
-    top: 1280px;
+    top: 1340px;
     left: 55%;
 }
 
@@ -119,7 +153,7 @@ body {
     font-family: 'GeneralSansLightItalic';
     font-size: 15;
     line-height: 0.5;
-    top: 1380px;
+    top: 1440px;
     left: 7%;
 }
 
