--- a/reviews.css
+++ b/reviews.css
@@ -1,6 +1,8 @@
 body {
     background-color : #FFFBEE;
     margin: 0px;
+    height: auto;
+    overflow-x: hidden;
 }
 
 .navbar ul{
@@ -19,12 +21,13 @@ body {
 .navbar a{
     color: black;
     text-decoration: none;
-    padding: 30px;
     display: block;
     text-align: center;
     font-family: 'GeneralSansMedium';
-    font-size: 17;
-    width: 19.581vw;
+    font-size: 1.5vw;
+    width: 26vw;
+    line-height: 5.2vw;
+    height: 5vw;
 }
 
 .navbar a:hover{
@@ -34,8 +37,9 @@ body {
 
 .navbar li{
     float: left;
-    width: 19.581vw;
+    width: 24.69vw;
 }
+
 
 #intro_box{
     position: relative;
@@ -165,7 +169,7 @@ body {
     background-color: #E6B875;
     position: relative;
     padding-top: 2%;
-    margin-top: 97%;
+    top:1400px
 }
 
 #contact{
@@ -206,3 +210,39 @@ body {
     font-family: 'GeneralSansLight';
     src: url('Fonts/GS\ Light.otf');
 }
+
+@media only screen and (max-width: 1700px) and (min-width: 451px){
+    .navbar a{
+        color: black;
+        text-decoration: none;
+        display: block;
+        text-align: center;
+        font-family: 'GeneralSansMedium';
+        font-size: 1.5vw;
+        width: 27vw;
+        line-height: 5.2vw;
+        height: 5vw;
+   }
+    .navbar li{
+        float: left;
+        width: 24vw;
+    }
+  }
+
+  @media only screen and (max-width: 450px) and (min-width: 1px) {
+    .navbar a{
+        color: black;
+        text-decoration: none;
+        display: block;
+        text-align: center;
+        font-family: 'GeneralSansMedium';
+        font-size: 1.5vw;
+        width: 27vw;
+        line-height: 5.2vw;
+        height: 5vw;
+   }
+    .navbar li{
+        float: left;
+        width: 24vw;
+    }
+  }
