--- a/reviews.css
+++ b/reviews.css
@@ -177,9 +177,159 @@ body {
     font-family: 'GeneralSansMedium';
     font-size: 27px;
     line-height: 1;
-    top: 14px;
+    top: 0px;
     left: 7%;
+    height: 150px;
 }
+
+@media only screen and (max-width: 450px) and (min-width: 1px) {
+
+    #footnote{
+        font-family: 'GeneralSansLight';
+        font-size: 18;
+        max-width: 100%;
+        height: 150px;
+        background-color: #E6B875;
+        position: relative;
+        padding-top: 2%;
+        top:1400px
+    }
+    
+    #contact{
+        position: relative  ;
+        font-family: 'GeneralSansMedium';
+        font-size: 27px;
+        line-height: 1;
+        top: 0px;
+        left: 7%;
+        height: 150px;
+    }
+
+    #adresa{
+        position: relative;
+        font-family: GeneralSansLight;
+        font-size: 18;
+        text-align: center;
+        line-height: 2px;
+        top: 0px;
+        left: 0%;
+        padding: 1%;
+
+    }
+    
+    #mobitel{
+        position: relative;
+        font-family: GeneralSansLight;
+        font-size: 18;
+        text-align: center;
+        line-height: 2px;
+        top: 0px;
+        left: 0%;
+        padding: 1%;
+
+    }
+    
+    #email{
+        position: relative;
+        font-family: GeneralSansLight;
+        font-size: 18;
+        text-align: center;
+        line-height: 2px;
+        top: 0px;
+        left: 0%;
+        padding: 1%;
+
+    }
+    
+    #socials{
+        position: relative;
+        font-family: GeneralSansLight;
+        font-size: 18;
+        text-align: center;
+        line-height: 2px;
+        top: 0px;
+        left: 0%;
+        padding: 1%;
+    }
+    
+    #ytvideo{
+        position: relative;
+        font-family: GeneralSansLight;
+        font-size: 18;
+        text-align: center;
+        line-height: 2px;
+        top: 0px;
+        left: 0%;
+        padding: 1%;
+
+    }
+
+    #CarlGermany{
+        width: 90vw;
+        position: relative ;
+        border-style: dashed;
+        font-family: 'GeneralSansLightItalic';
+        font-size: 15;
+        line-height: 1.2;
+        top: 0px;
+        left: 4%;
+    }
+    /* *{border: 1px solid red;} */
+    #ClarissaGermany{
+        width: 90vw;
+        position: relative;
+        font-family: 'GeneralSansLightItalic';
+        font-size: 15;
+        line-height: 1.2;
+        left: 4%;
+        border-style: dotted;
+    }
+    
+    #Kelly{
+        width: 90vw;
+        position: relative;
+        font-family: 'GeneralSansLightItalic';
+        font-size: 15;
+        line-height: 1.2;
+        left: 4%;
+    }
+    
+    #ClaudiaAustria{
+        width: 90vw;
+        position: relative;
+        font-family: 'GeneralSansLightItalic';
+        font-size: 15;
+        line-height: 1.2;
+        left: 4%;
+    }
+    
+    #Laura{
+        width: 90vw;
+        position: relative;
+        font-family: 'GeneralSansLightItalic';
+        font-size: 15;
+        line-height: 1.2;
+        left: 4%;
+    }
+    
+    #Oscar{
+        width: 90vw;
+        position: relative;
+        font-family: 'GeneralSansLightItalic';
+        font-size: 15;
+        line-height: 1.2;
+        left: 4%;
+    }
+    
+    #Mirek{
+        width: 90vw;
+        position: relative;
+        font-family: 'GeneralSansLightItalic';
+        font-size: 15;
+        line-height: 1.2;
+        left: 4%;
+    }
+  }
 
 
 @font-face {
