--- a/inquiry.css
+++ b/inquiry.css
@@ -13,33 +13,29 @@ body {
     margin: 0;
     display: flex;
     justify-content: space-evenly;
-    flex-wrap: nowrap; /* Keep all in one line */
-}
-
-.navbar li {
-    flex: 1; /* Each item takes equal space */
+    flex-wrap: nowrap;
+  }
+  
+  .navbar li {
+    flex: 1;
     text-align: center;
-}
-
-.navbar a {
+  }
+  
+  .navbar a {
+    display: block;
     color: black;
     text-decoration: none;
-    display: block;
     font-family: 'GeneralSansMedium';
     font-size: 1.5vw;
-    padding: 1.2vw 0;
-    height: 100%;
-}
-
-.navbar a.active {
+    padding: 1.2vw 0; /* vertical padding */
+    background-color: #E6B875; /* set background explicitly */
+  }
+  
+  .navbar a:hover,
+  .navbar a.active {
     background-color: white;
     color: #E6B875;
-}
-
-.navbar a:hover {
-    background-color: white;
-    color: #E6B875;
-}
+  }
 
 
 @font-face {
